Add pages and directories

--- a/zh/config.json
+++ b/zh/config.json
@@ -1,7 +1,7 @@
 {
-  "additionalFooterText": "All content and images &copy; by Your Name Goes Here&nbsp;",
+  "additionalFooterText": "All content and images &copy; by Hooman&nbsp;<br>",
   "anchorCharacter": "#",
   "lineBreaks": "gfm",
-  "title": "Your wiki name",
+  "title": "Hoo‘s Wiki",
   "useSideMenu": true
 }
